<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/lemonchiffon" >
    
	<include layout="@layout/sub_way" />
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="280dp"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@drawable/border"
	    android:orientation="vertical"
	    android:focusable="true"
	    android:focusableInTouchMode="true"
	    >
		<EditText 
		    android:id="@+id/reg_cellp"
		    android:layout_width="fill_parent"
		    android:layout_height="46dp"
		    android:background="@null"
		    android:hint="@string/reg1">
		</EditText>
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="0.1dp"
		    android:background="@color/gray"
		    />
		<EditText 
		    android:id="@+id/reg_phone"
		    android:layout_width="fill_parent"
		    android:layout_height="46dp"
		    android:background="@null"
		    android:hint="@string/reg2">
		</EditText>
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="0.1dp"
		    android:background="@color/gray"
		    />
		<EditText 
		    android:id="@+id/reg_qq"
		    android:layout_width="fill_parent"
		    android:layout_height="46dp"
		    android:background="@null"
		    android:hint="@string/reg3">
		</EditText>
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="0.1dp"
		    android:background="@color/gray"
		    />
		<EditText 
		    android:id="@+id/reg_address"
		    android:layout_width="fill_parent"
		    android:layout_height="46dp"
		    android:background="@null"
		    android:hint="@string/reg4">
		</EditText>
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="0.1dp"
		    android:background="@color/gray"
		    />
		<EditText 
		    android:id="@+id/reg_name"
		    android:layout_width="fill_parent"
		    android:layout_height="46dp"
		    android:background="@null"
		    android:hint="@string/reg5">
		</EditText>
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="0.1dp"
		    android:background="@color/gray"
		    />
		<EditText 
		    android:id="@+id/reg_pwd"
		    android:layout_width="fill_parent"
		    android:layout_height="46dp"
		    android:background="@null"
		    android:hint="@string/reg6">
		</EditText>
	</LinearLayout>
	<Button
	    android:id="@+id/reg_sub"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:background="@drawable/reg_btn"
	    />
</LinearLayout>
